--- a/admin/index.html
+++ b/admin/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>Admin - Teletontos FC</title>
+    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   </head>
   <body>
-    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+    <script>
+      // Config opcional para GitHub OAuth via Netlify Identity (não precisa se Identity estiver desativado)
+    </script>
   </body>
 </html>
