--- a/comunidade.html
+++ b/comunidade.html
@@ -19,13 +19,14 @@
 
       body {
         font-family: "Orbitron", sans-serif;
-        background: #14002c;
-        color: #f0f0f0;
+        background: #1a0033;
+        color: #e0e0e0;
+        line-height: 1.4;
       }
 
       .hero {
         background: url("assets/comunidade.png") center/cover no-repeat;
-        height: 100vh;
+        height: 80vh;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
@@ -42,82 +43,72 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background: rgba(83, 0, 102, 0.3);
+        background: rgba(26, 0, 51, 0.7);
         z-index: 0;
       }
 
       .hero-text {
         position: relative;
         z-index: 1;
-        background: rgba(20, 0, 44, 0.6);
-        padding: 2rem 3rem;
-        border-radius: 12px;
-        backdrop-filter: blur(4px);
+        padding: 1.5rem 2rem;
         color: #fff;
-        text-align: center;
         max-width: 90%;
-        margin-top: 25vh;
+        margin-top: 20vh;
       }
 
       .hero-text h1 {
-        font-size: 3rem;
-        color: #ffcc00;
-        text-shadow: 2px 2px 5px #000;
+        font-size: 2.5rem;
+        color: #ffd700;
+        text-shadow: 1px 1px 4px #000;
       }
 
       .hero-text p {
-        font-size: 1.2rem;
-        color: #ffffff;
+        font-size: 1rem;
+        color: #ddd;
       }
 
       nav {
         position: relative;
         z-index: 1;
         display: flex;
-        gap: 2rem;
-        padding: 1rem 2rem;
-        background: rgba(30, 0, 60, 0.85);
-        border-radius: 8px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+        gap: 1.5rem;
+        padding: 1rem;
+        background: rgba(26, 0, 51, 0.9);
+        border-radius: 6px;
         margin-top: auto;
-        margin-bottom: 2rem;
+        margin-bottom: 1.5rem;
       }
 
       nav a {
-        color: #ffcc00;
+        color: #ffd700;
         text-decoration: none;
-        font-weight: bold;
-        transition: all 0.3s ease;
+        font-weight: 600;
+        transition: color 0.2s ease;
       }
 
       nav a:hover {
-        color: #ff80b3;
-        transform: scale(1.1);
+        color: #ffaa00;
       }
 
       main {
         padding: 2rem;
-        max-width: 1000px;
+        max-width: 900px;
         margin: auto;
       }
 
       .info {
-        background: #1a0033;
-        padding: 2rem;
-        margin-bottom: 3rem;
-        border-radius: 14px;
-        border: 2px solid #ffcc00;
-        box-shadow: 0 0 18px rgba(255, 204, 0, 0.3);
+        background: #220044;
+        padding: 1.5rem;
+        margin-bottom: 2rem;
+        border-radius: 8px;
+        border: 1px solid #ffd700;
         text-align: center;
       }
 
       .info h3 {
-        font-size: 2rem;
-        color: #ffcc00;
+        font-size: 1.8rem;
+        color: #ffd700;
         margin-bottom: 1rem;
-        text-align: left;
-      }
-      .info:first-of-type h3 {
         text-align: left;
       }
 
@@ -128,53 +119,143 @@
       }
 
       .info li {
-        margin-bottom: 0.7rem;
-        font-size: 1rem;
-        color: #ddd;
-      }
-
-      .info img {
-        max-width: 100%;
-        border-radius: 12px;
-        margin: 1rem 0;
-        border: 2px solid #ffcc00;
+        margin-bottom: 0.5rem;
+        font-size: 0.95rem;
+        color: #bbb;
       }
 
       .info p {
-        font-size: 1rem;
-        line-height: 1.7;
-        color: #dddddd;
+        font-size: 0.95rem;
+        color: #ccc;
         margin-bottom: 1rem;
         text-align: left;
       }
 
       footer {
-        background: #110033;
-        color: #fff;
+        background: #15002a;
+        color: #bbb;
         text-align: center;
-        padding: 2rem;
-        font-size: 0.9rem;
+        padding: 1rem;
+        font-size: 0.85rem;
       }
 
-      /* Responsivo */
       @media (max-width: 768px) {
         .hero-text {
-          margin-top: 35vh;
-          padding: 1.5rem 1rem;
+          margin-top: 25vh;
+          padding: 1rem;
         }
 
         .hero-text h1 {
-          font-size: 2rem;
-        }
-
-        .hero-text p {
-          font-size: 1rem;
+          font-size: 1.8rem;
         }
 
         nav {
           flex-direction: column;
           align-items: center;
-          gap: 1rem;
+          gap: 0.8rem;
+        }
+
+        .match-card {
+          flex-direction: column;
+          gap: 0.5rem;
+        }
+
+        .team {
+          width: 80px;
+        }
+
+        .team img {
+          width: 50px;
+          height: 50px;
+        }
+
+        .team p {
+          font-size: 0.8rem;
+        }
+
+        .score {
+          font-size: 1.2rem;
+        }
+      }
+
+      .match-card {
+        background: #240047;
+        border: 2px solid #ffcc00;
+        border-radius: 14px;
+        padding: 1.5rem;
+        margin-bottom: 2rem;
+        box-shadow: 0 0 12px rgba(255, 204, 0, 0.2);
+      }
+
+      .match-date {
+        font-weight: bold;
+        font-size: 1.1rem;
+        color: #1a0033;
+        background-color: #cca300;
+        padding: 0.5rem 1rem;
+        border-radius: 20px;
+        display: inline-block;
+        margin: 0 auto 1.5rem auto;
+        text-align: center;
+        box-shadow: 0 0 10px rgba(255, 204, 0, 0.4);
+      }
+
+      /* Wrapper dos times */
+      .teams-wrapper {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-direction: row;
+        gap: 2rem;
+        flex-wrap: wrap;
+      }
+
+      /* Estilo do “X” */
+      .vs-text {
+        font-size: 2rem;
+        font-weight: bold;
+        color: #ffcc00;
+      }
+
+      /* Time (logo, placar, nome) */
+      .team {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 0.5rem;
+      }
+
+      .team img {
+        width: 90px;
+        height: 90px;
+        object-fit: contain;
+        border-radius: 12px;
+        border: 2px solid #ffcc00;
+      }
+
+      .team input {
+        width: 50px;
+        padding: 0.3rem;
+        font-size: 1rem;
+        text-align: center;
+        border-radius: 6px;
+        border: 2px solid #ff80b3;
+        background: #1a0033;
+        color: #fff;
+      }
+
+      .team p {
+        color: #ffcc00;
+        font-weight: bold;
+        font-size: 1rem;
+        text-align: center;
+      }
+
+      /* Responsivo: coloca um abaixo do outro no celular */
+      @media (max-width: 768px) {
+        .teams-wrapper {
+          flex-direction: column;
+          gap: 1.2rem;
         }
       }
     </style>
@@ -196,30 +277,65 @@
       <section class="info">
         <h3>📣 Últimos Avisos</h3>
         <ul>
-          <li>⚠️ Campeonato dia 16/06</li>
-          <li>🛠️ Treinos no horario do cronograma na liga.</li>
+          <li>⚠️ Jogos do campeonato durante a semana 16/06 - 29/06</li>
           <li>✅ Atualização do elenco feita em 13/06/2025.</li>
         </ul>
       </section>
 
+      ```
       <section class="info">
-        <h3>📅 Próximos Confrontos</h3>
-        <ul>
-          <li>Em breve atualizações</li>
-          <li></li>
-        </ul>
-      </section>
+        <h3>📅 Confrontos</h3>
 
-      <section class="info">
-        <h3>📅 Cronograma Oficial</h3>
-        <p><strong>SEGUNDA-FEIRA</strong><br />20:30 às 00:00</p>
-        <p><strong>TERÇA-FEIRA</strong><br />20:30 às 00:00</p>
-        <p><strong>QUINTA-FEIRA</strong><br />20:30 às 00:00</p>
-        <br />
-        <p style="font-size: 0.95rem; color: #ffcc00">
-          OUTROS DIAS LIVRES A NÃO SER SE TIVER CAMPEONATOS MARCADOS PARA ESSES
-          DIAS
-        </p>
+        <div class="match-card">
+          <p class="match-date">16/06 - 21:40</p>
+          <div class="teams-wrapper">
+            <div class="team">
+              <img src="assets/logo-nexus.png" alt="Nexus SAF Logo" />
+              <input type="text" placeholder="0" />
+              <p>Nexus SAF</p>
+            </div>
+            <div class="vs-text">X</div>
+            <div class="team">
+              <img src="assets/logo-teletontos.png" alt="Teletontos FC Logo" />
+              <input type="text" placeholder="0" />
+              <p>Teletontos FC</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="match-card">
+          <p class="match-date">17/06 - 22:05</p>
+          <div class="teams-wrapper">
+            <div class="team">
+              <img src="assets/logo-teletontos.png" alt="Teletontos FC Logo" />
+              <input type="text" placeholder="0" />
+              <p>Teletontos FC</p>
+            </div>
+            <div class="vs-text">X</div>
+            <div class="team">
+              <img src="assets/bagual-logo.png" alt="SC Bagual Flow Logo" />
+              <input type="text" placeholder="0" />
+              <p>SC Bagual Flow</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="match-card">
+          <p class="match-date">17/06 - 22:30</p>
+          <div class="teams-wrapper">
+            <div class="team">
+              <img src="assets/logo-roma.png" alt="Roma Clubs Logo" />
+              <input type="text" placeholder="0" />
+              <p>Roma Clubs</p>
+            </div>
+            <div class="vs-text">X</div>
+            <div class="team">
+              <img src="assets/logo-teletontos.png" alt="Teletontos FC Logo" />
+              <input type="text" placeholder="0" />
+              <p>Teletontos FC</p>
+            </div>
+          </div>
+        </div>
       </section>
 
       <section class="info">
@@ -280,7 +396,7 @@
     </main>
 
     <footer>
-      <p>&copy; 2025 Teletontos FC - Comunidade Oficial</p>
+      <p>© 2025 Teletontos FC - Comunidade Oficial</p>
     </footer>
   </body>
 </html>
