Atualizando as posições que precisa

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           em <b>equipe</b>, com espírito competitivo e bom humor! Se você gosta
           de jogar Pro Clubs, leva a gameplay a sério (mas sem perder a resenha)
           e tem vontade de crescer com o time, essa é sua chance! <br />
-          <b>Temos vagas para posições como VOL, LE, LD, ZAG, GL, ATA</b>
+          <b>Temos vagas para posições como LE, LD, ZAG, GL.</b>
         </p>
         <a
           href="https://forms.gle/GinsokJ5LeAzdiXX7"
