Amistoso contra a chapa

--- a/comunidade.html
+++ b/comunidade.html
@@ -275,6 +275,19 @@
 
     <main>
       <section class="info">
+        <img
+          src="assets/banner-7.png"
+          alt="Banner de Amistoso"
+          style="
+            width: 100%;
+            border-radius: 12px;
+            margin-bottom: 2rem;
+            box-shadow: 0 0 12px rgba(255, 204, 0, 0.3);
+          "
+        />
+      </section>
+
+      <section class="info">
         <h3>📣 Últimos Avisos</h3>
         <ul>
           <li>
