--- a/comunidade.html
+++ b/comunidade.html
@@ -139,6 +139,45 @@
         font-size: 0.85rem;
       }
 
+.banner-img {
+  width: 100%;
+  height: auto;
+  border-radius: 12px;
+  margin-bottom: 2rem;
+  box-shadow: 0 0 12px rgba(255, 204, 0, 0.3);
+}
+
+@media (min-width: 769px) {
+  .banner-img {
+    background-image: none;
+  }
+
+  .banner-img::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: auto;
+    border-radius: 12px;
+    background-image: url("assets/amistoso-02.07.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding-top: 56.25%; /* Proporção 16:9 */
+  }
+}
+
+@media (max-width: 768px) {
+  .banner-img {
+    height: 300px;
+    background-image: url("assets/amistoso-02.07.png");
+    background-size: 160%;
+    background-position: center center;
+    background-repeat: no-repeat;
+  }
+}
+
+
+
       @media (max-width: 768px) {
         .hero-text {
           margin-top: 25vh;
@@ -274,17 +313,8 @@
     </header>
 
     <main>
-      <section class="info">
-        <img
-          src="assets/banner-7.png"
-          alt="Banner de Amistoso"
-          style="
-            width: 100%;
-            border-radius: 12px;
-            margin-bottom: 2rem;
-            box-shadow: 0 0 12px rgba(255, 204, 0, 0.3);
-          "
-        />
+     <div class="banner-img"></div>
+
       </section>
 
       <section class="info">
